# lambic

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
src/acatome_lambic/: __init__.py  cli.py
src/acatome_lambic/core/: config.py  llm.py  mcp_client.py  session.py
src/acatome_lambic/tui/: app.py
src/lambic/: __init__.py  cli.py
src/lambic/core/: config.py  llm.py  mcp_client.py  session.py
src/lambic/tui/: app.py
tests/: conftest.py  test_config.py  test_llm.py  test_mcp_client.py  test_session.py
