[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambic"
version = "0.1.0"
description = "MCP-aware LLM shell with provider switching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "black>=24.0"]

[project.scripts]
lambic = "lambic.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lambic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/lambic/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
